<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert_big"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_alert_header"
        android:gravity="center"
        android:text="@string/text_paused"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:elevation="4dp"
        android:background="@drawable/bg_corners_shape_vibration">
        <ImageView
            android:id="@+id/icon_vibration"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_vibration_96"/>

        <TextView
            android:id="@+id/tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/icon_vibration"
            android:textSize="16sp"
            android:textColor="@color/purple"
            android:text="@string/text_vibration" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@null"
            android:background="@drawable/bg_switch_style"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round_corners_shape"
        android:gravity="center"
        android:text="@string/text_continue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btn_menu"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round_corners_shape"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/text_menu" />

    <TextView
        android:id="@+id/btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_corners_shape_menu"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:text="@string/text_privacy" />

</LinearLayout>