<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert_big"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_alert_header"
        android:gravity="center"
        android:text="@string/text_time_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:elevation="4dp"
        android:background="@drawable/bg_corners_shape_vibration">
        <ImageView
            android:id="@+id/icon_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_alert_clock_100" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_get_ad"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round_corners_shape"
        android:gravity="center"
        android:text="@string/btn_obtain_more_time"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btn_replay"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/purple"
        android:text="@string/btn_replay" />

</LinearLayout>